--- a/src/frontend/src/RSKLightningBridge.module.css
+++ b/src/frontend/src/RSKLightningBridge.module.css
@@ -5,14 +5,14 @@
     margin: auto;
     padding: 20px;
   }
-  
+
   .header {
     background-color: #f0f0f0;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
   }
-  
+
   .step {
     background-color: #fff;
     border: 1px solid #ccc;
@@ -20,7 +20,7 @@
     border-radius: 5px;
     margin-bottom: 20px;
   }
-  
+
   .button {
     background-color: #4CAF50; /* Green */
     border: none;
@@ -35,13 +35,13 @@
     cursor: pointer;
     border-radius: 5px;
   }
-  
+
   .button:hover {
     background-color: white;
     color: black;
     border: 1px solid #4CAF50;
   }
-  
+
   .input {
     padding: 10px;
     font-size: 16px;
@@ -50,15 +50,23 @@
     width: calc(100% - 22px);
     border: 1px solid #ccc;
   }
-  
+
   .label {
     margin-bottom: 5px;
     display: block;
     font-weight: bold;
   }
-  
+
   .message {
     color: blue;
     font-size: 18px;
+    overflow-x: scroll;
   }
-  
+  .tabs {
+    margin-bottom: 20px;
+  }
+
+  .activeTab {
+    background-color: #4CAF50;
+    color: white;
+  }
