fetchUserBalance to show rbtc balance (in sats) once evm wallet is connected

--- a/src/frontend/src/RSKLightningBridge.module.css
+++ b/src/frontend/src/RSKLightningBridge.module.css
@@ -70,3 +70,9 @@
     background-color: #4CAF50;
     color: white;
   }
+
+  .balance {
+    margin: 20px 0;
+    font-size: 18px;
+    color: green;
+  }
